@@ -1,2 +1,3 @@
 pref("extensions.handy_dictionary_ext.autorun", true);
 pref("extensions.handy_dictionary_ext.dict", 0);
+pref("extensions.handy_dictionary_ext.mode", 0);
